--- a/FamilyDashboard.Blazor/_Imports.razor
+++ b/FamilyDashboard.Blazor/_Imports.razor
@@ -6,3 +6,4 @@
 @using Microsoft.JSInterop
 @using FamilyDashboard.Blazor
 @using FamilyDashboard.Blazor.Modules.Common
+@using FamilyDashboard.Blazor.Services
