--- a/FamilyDashboard.Blazor/Pages/Index.razor
+++ b/FamilyDashboard.Blazor/Pages/Index.razor
@@ -1,5 +1,10 @@
 ﻿@page "/"
 
-<DashboardTitle />
-<hr />
-<DashboardFooter />
+<div class="row">
+    <div class="col p-3 border border-primary">
+        <RandomJoke />
+    </div>
+    <div class="col p-3 border border-primary">
+        <RandomQuote />
+    </div>
+</div>
