--- a/FamilyDashboard.Blazor/_Imports.razor
+++ b/FamilyDashboard.Blazor/_Imports.razor
@@ -6,4 +6,5 @@
 @using Microsoft.JSInterop
 @using FamilyDashboard.Blazor
 @using FamilyDashboard.Blazor.Modules.Common
+@using FamilyDashboard.Blazor.Modules.Tiles
 @using FamilyDashboard.Blazor.Services
