--- a/FamilyDashboard.Blazor/Modules/Common/DashboardFooter.razor
+++ b/FamilyDashboard.Blazor/Modules/Common/DashboardFooter.razor
@@ -1,5 +1,5 @@
 ﻿
-<p>@FamilyName Family Dashboard &copy; @DateTime.Today.Year</p>
+<p class="m-0">@FamilyName Family Dashboard &copy; @DateTime.Today.Year</p>
 
 @code {
     [Parameter]
