--- a/FamilyDashboard.Blazor/Modules/Tiles/RandomJoke.razor
+++ b/FamilyDashboard.Blazor/Modules/Tiles/RandomJoke.razor
@@ -7,8 +7,8 @@
 }
 else
 {
-    <h4 class="text-dark">@_setup</h4>
-    <h5 class="text-success-emphasis">@_punchLine</h5>
+    <h5 class="text-dark">@_setup</h5>
+    <h6 class="text-secondary-emphasis">@_punchLine</h6>
 }
 
 @code {
