--- a/FamilyDashboard.Blazor/Modules/Tiles/RandomQuote.razor
+++ b/FamilyDashboard.Blazor/Modules/Tiles/RandomQuote.razor
@@ -1,13 +1,17 @@
 @inject IRandomQuoteService RandomQuoteService
 @using FamilyDashboard.Blazor.Models
 
-@if (_content == null)
+@if (_errorMessage != null)
+{
+    <p class="m-0">@_errorMessage</p>
+}
+else if (_content == null)
 {
     <p>Loading a random quote...</p>
 }
 else
 {
-    <figure>
+    <figure @onclick="async () => await FetchQuoteTextAsync()">
       <blockquote class="blockquote">
         <p>@_content</p>
       </blockquote>
@@ -18,6 +22,7 @@ else
 }
 
 @code {
+    private string? _errorMessage;
     private string? _content;
     private string? _author;
     private Timer? _timer;
@@ -35,14 +40,22 @@ else
 
     async Task FetchQuoteTextAsync()
     {
-        _content = null;
-        var getRandomQuoteResponse = await RandomQuoteService.GetQuoteAsync();
-        if (getRandomQuoteResponse == null)
+        try
         {
-            _content = "";
-            return;
+            _content = null;
+            var getRandomQuoteResponse = await RandomQuoteService.GetQuoteAsync();
+            if (getRandomQuoteResponse == null)
+            {
+                _content = "";
+                return;
+            }
+            _content = getRandomQuoteResponse.Content;
+            _author = getRandomQuoteResponse.Author;
+            StateHasChanged();
         }
-        _content = getRandomQuoteResponse.Content;
-        _author = getRandomQuoteResponse.Author;
+        catch
+        {
+            _errorMessage = "Unable to retrieve a quote.";
+        }
     }
 }
