--- a/FamilyDashboard.Blazor/src/scss/_variables.scss
+++ b/FamilyDashboard.Blazor/src/scss/_variables.scss
@@ -8,7 +8,7 @@ $maroon: #d65d72 !default;
 $purple: #6610f2 !default;
 
 $primary: $blue;
-$succes: $green;
+$success: $green;
 $warning: $yellow;
 $danger: $red;
 $tertiary: $gray;
