add smart home tile with smartthings integration

--- a/FamilyDashboard.Blazor/MainLayout.razor
+++ b/FamilyDashboard.Blazor/MainLayout.razor
@@ -3,13 +3,13 @@
 
 <PageTitle>@_familyName Family Dashboard</PageTitle>
 <main>
-    <header class="d-flex justify-content-center sticky-top mb-2 p-3">
+    <header class="d-flex justify-content-center mb-2 p-3">
         <DashboardTitle FamilyName="@_familyName" />
     </header>
     <article class="content p-4">
         @Body
     </article>
-    <footer class="d-flex justify-content-center sticky-bottom mt-2 p-3">
+    <footer class="d-flex justify-content-center mt-2 p-3">
         <DashboardFooter FamilyName="@_familyName" />
     </footer>
 </main>
